--- a/app/templates/components/post-details.hbs
+++ b/app/templates/components/post-details.hbs
@@ -3,19 +3,19 @@
     <img class="icon" src={{post.user.photoThumbUrl}} />
   {{/link-to}}
   <div class="comment-content">
-    {{#if isEditingBody}}
+    {{#if isEditing}}
       <div class="input-group">
         {{editor-with-preview input=post.markdown isLoading=post.isSaving autofocus=true}}
       </div>
       <div class="input-group">
-        <button {{action 'savePostBody'}} class="default small right save">Save</button>
-        <button {{action 'cancelEditingPostBody'}} class="clear small right cancel">Cancel</button>
+        <button {{action 'save'}} class="default small right save">Save</button>
+        <button {{action 'cancel'}} class="clear small right cancel">Cancel</button>
       </div>
     {{else}}
       <div class="comment-info">
         {{#link-to 'slugged-route' post.user.username class="username"}}{{post.user.username}}{{/link-to}} posted {{moment-from-now post.createdAt}}
         {{#if canEdit}}
-          <a class="edit" {{action 'editPostBody'}}>edit</a>
+          <a class="edit" {{action 'edit'}}>edit</a>
         {{/if}}
         {{#if post.containsCode}}
           {{code-theme-selector}}
