show roles and add some styles

--- a/app/styles/templates/project/thank-you.scss
+++ b/app/styles/templates/project/thank-you.scss
@@ -13,6 +13,11 @@
     width: $width;
   }
 
+  &__contributors {
+    @include span-columns(12);
+    margin: 1.4em 0;
+  }
+
   h3 {
     font-size: $header-font-size-large;
     font-weight: 600;
