--- a/app/templates/components/volunteer-headshot.hbs
+++ b/app/templates/components/volunteer-headshot.hbs
@@ -1,3 +1,3 @@
-<img src={{volunteer.photoThumbUrl}} alt={{altText}} />
-<p data-test-selector="volunteer name">{{volunteer.name}}</p>
-<p data-test-selector="volunteer role">{{role}}</p>
+<img class="volunteer-headshot__image" src={{volunteer.photoThumbUrl}} alt={{altText}} />
+<p class="volunteer-headshot__name" data-test-selector="volunteer name">{{volunteerName}}</p>
+<p class="volunteer-headshot__role" data-test-selector="volunteer role">{{userRole.role.name}}</p>
