--- a/app/styles/components/volunteer-headshot.scss
+++ b/app/styles/components/volunteer-headshot.scss
@@ -6,17 +6,16 @@
 
   &__name {
     font-weight: 600;
-    margin-bottom: 0;
+    margin: 0;
   }
 
   &__role {
     font-size: $body-font-size-small;
     color: $light-text;
+    margin-top: 0;
   }
 
   img {
-    height: 75px;
-    width: 75px;
     border-radius: 10px;
   }
 }
