--- a/app/templates/components/thank-you-container.hbs
+++ b/app/templates/components/thank-you-container.hbs
@@ -10,6 +10,6 @@
 </div>
 <div class="thank-you-container__contributors">
   {{#each contributors as |contributor|}}
-    {{volunteer-headshot volunteer=contributor}}
+    {{volunteer-headshot volunteer=contributor data-test-selector="volunteer headshot"}}
   {{/each}}
 </div>
