wait tell name is loaded to render written content

--- a/app/templates/components/volunteer-headshot.hbs
+++ b/app/templates/components/volunteer-headshot.hbs
@@ -1,7 +1,9 @@
-<img class="volunteer-headshot__image icon medium" src={{volunteer.photoThumbUrl}} alt={{altText}} />
-<p class="volunteer-headshot__name" data-test-selector="volunteer name">{{volunteerName}}</p>
-{{#if userRole}}
-  <p class="volunteer-headshot__role" data-test-selector="volunteer role">{{userRole.role.name}}</p>
-{{else}}
-  <p class="volunteer-headshot__role" data-test-selector="volunteer role">Volunteer</p>
+<img class="volunteer-headshot__image icon large" src={{volunteer.photoThumbUrl}} alt={{altText}} />
+{{#if isVolunteerNameLoaded}}
+  <p class="volunteer-headshot__name" data-test-selector="volunteer name">{{volunteerName}}</p>
+  {{#if userRole}}
+    <p class="volunteer-headshot__role" data-test-selector="volunteer role">{{userRole.role.name}}</p>
+  {{else}}
+    <p class="volunteer-headshot__role" data-test-selector="volunteer role">Volunteer</p>
+  {{/if}}
 {{/if}}
