address feedback: inline if don't rebuild data in tests if you don't need to computed property styling magic numbers deserve constants

--- a/app/templates/components/volunteer-headshot.hbs
+++ b/app/templates/components/volunteer-headshot.hbs
@@ -1,9 +1,5 @@
 <img class="volunteer-headshot__image icon large" src={{volunteer.photoThumbUrl}} alt={{altText}} />
 {{#if isVolunteerNamePresent}}
   <p class="volunteer-headshot__name" data-test-selector="volunteer name">{{volunteerName}}</p>
-  {{#if userRole}}
-    <p class="volunteer-headshot__role" data-test-selector="volunteer role">{{userRole.role.name}}</p>
-  {{else}}
-    <p class="volunteer-headshot__role" data-test-selector="volunteer role">Volunteer</p>
-  {{/if}}
+  <p class="volunteer-headshot__role" data-test-selector="volunteer role">{{if userRole userRole.role.name "Volunteer"}}</p>
 {{/if}}
